RESOLVED FIXED288970
[Win] Fix ISO_MALLOC export macros on Windows
https://bugs.webkit.org/show_bug.cgi?id=288970
Summary [Win] Fix ISO_MALLOC export macros on Windows
Ian Grunert
Reported 2025-03-03 08:20:00 PST
On Windows - if a class has a 'dllexport' attribute, all it's members get 'dllexport'-ed by default. Adding the 'dllexport' attribute to a member of that class generates an error: attribute 'dllexport' cannot be applied to member of 'dllexport' class This problem means using WTF_MAKE_TZONE_OR_ISO_ALLOCATED_EXPORT on a WEBCORE_EXPORT class causes a compilation error on Windows when libpas is enabled. To get around this, we can split WTF_MAKE_TZONE_OR_ISO_ALLOCATED_EXPORT and WTF_MAKE_TZONE_OR_ISO_ALLOCATED_EXPORT_IN_EXPORTED_CLASS, so WTF_MAKE_TZONE_OR_ISO_ALLOCATED_EXPORT_IN_EXPORTED_CLASS can be made into WTF_NOEXPORT on Windows.
Attachments
Ian Grunert
Comment 1 2025-03-07 15:06:47 PST
EWS
Comment 2 2025-03-07 15:36:49 PST
Committed 291811@main (a4ec5bc90ef5): <https://commits.webkit.org/291811@main> Reviewed commits have been landed. Closing PR #41773 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-03-07 15:37:16 PST
Note You need to log in before you can comment on or make changes to this bug.