Fix ISO_MALLOC export macros on Windows https://bugs.webkit.org/show_bug.cgi?id=288970

Reviewed by Fujii Hironori.

On Windows - if a class has a 'dllexport' attribute, all it's members
get 'dllexport'-ed by default. Adding the 'dllexport' attribute to a
member of that class generates an error:

attribute 'dllexport' cannot be applied to member of 'dllexport' class

This means using WTF_MAKE_TZONE_OR_ISO_ALLOCATED_EXPORT on a
WEBCORE_EXPORT class causes a compilation error on Windows when libpas
is enabled.

To get around this, we can remove the class-level WEBCORE_EXPORT and
replace with appropriate method-level WEBCORE_EXPORT.

* Source/WebCore/Modules/indexeddb/IDBDatabaseNameAndVersionRequest.h:
* Source/WebCore/Modules/indexeddb/client/IDBConnectionProxy.h:
* Source/WebCore/Modules/reporting/Report.h:
(): Deleted.
* Source/WebCore/Modules/reporting/ReportBody.h:
(): Deleted.
* Source/WebCore/Modules/reporting/ReportingScope.h:
* Source/WebCore/dom/StaticNodeList.cpp:
(WebCore::StaticNodeList::StaticNodeList):
* Source/WebCore/dom/StaticNodeList.h:
* Source/WebCore/dom/TrustedHTML.h:
(): Deleted.
* Source/WebCore/dom/TrustedScript.h:
* Source/WebCore/dom/TrustedScriptURL.h:
(): Deleted.

Canonical link: https://commits.webkit.org/291811@main