Source/WebCore/Modules/indexeddb/client/IDBConnectionProxy.h
@@ -62,7 +62,7 @@ namespace IDBClient {
 
 class IDBConnectionToServer;
 
-class WEBCORE_EXPORT IDBConnectionProxy final {
+class IDBConnectionProxy final {
     WTF_MAKE_TZONE_OR_ISO_ALLOCATED_EXPORT(IDBConnectionProxy, WEBCORE_EXPORT);
 public:
     IDBConnectionProxy(IDBConnectionToServer&, PAL::SessionID);
